with format string argument, adding ultra-short option (ushort).
Updated docstrings. Fixed and added tests.

*****

Implemented u.AlwaysPassValidator() class, used to display a bottom
toolbar with author and title of current entry on the prompt while
searching.
(PS: I'm pretty sure there must be a smarter way to do this)

Implemented u.KeyWordCompleter() class, which enables completion
by key or bibcode while searching on the prompt.

Implemented u.AutoSuggestKeyCompleter() class adapted to autosuggest
from u.KeyWordCompleter().

Replaced u.search_completer, u.ads_completer WordCompleters with
u.search_keywords, u.ads_keywords lists that contain the kewords
to create the completers.

Updated completer and autosuggester of cli_search() prompt.
Added validator/bottom toolbar to cli_search() prompt.

I have not idea how to pytest the bottom toolbar nor the
auto-completions/auto-suggestions.


*****  Mon Dec 30 09:09:56 CLT 2019  *****

Added pdf_dir config parameter where to store PDF files.
Create u.HOME/pdf/ folder on bm.init() call (default dir for PDFs).
Updated and added tests.


*****  Tue Dec 31 14:23:32 CLT 2019  *****

Modified u.get_authors() 'ushort' format to trim out every character
except letters, spaces, dashes, non-ascii, and parentheses.
Added tests.

*****

Added pdf_manager module.
Implemented pm.guess_name() function.
Tested and documented.

*****

Implemented pm.open() function to open PDF files.
Added tests (Except for when open actually works).

*****

Implemented pm.request_ads() function to request a PDF from ADS.
Documented and tested.
Added mock_webbrowser() fixture into conftest.py and added new
requests_mock entries.


*****  Wed Jan  1 01:21:14 CLT 2020  *****

Changed query argument of pm.guess_name() function to arxiv Bool.
Updated docstrings and tests accordingly.
Fixed docstring of pm.request_ads() function.

*****

Implemented pm.add_ads_request() function to add requested PDF into
the database.
Documented and tested.
